--- a/css/estilo-contactanos.css
+++ b/css/estilo-contactanos.css
@@ -35,19 +35,26 @@ header {
     z-index: 10;
 }
 .contenedor {
+    width: 80%;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 10%;
     margin-right: 10px;
-    padding: 20px;
+    padding: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.8);
 
+  }
+  .contenedor h2{
+    margin-left: 30px;
+    margin-top: 10px;
   }
   
   /* Opcional: si deseas añadir espacio entre los elementos */
   .izquierda {
-    padding: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
     margin-right: auto;
     width: 600px;
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.8);
@@ -55,6 +62,7 @@ header {
   
   .derecha {
     margin-left: auto;
+    margin-right: 15%;
   }
   
 
@@ -78,15 +86,30 @@ header {
     margin-left: auto;
     padding: 50px;
 }
+.contenido-textos h3{
+    margin-left: 40%;
+}
+
+#marco{
+    width: 80%;
+    margin-top: 30px;
+    margin-left: 10%;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.8);
+    }
 
 #map {
-    margin-top: 60px;
-    margin-left: 30px;
+    margin-top: 10px;
+    margin-left: 8px;
     width: 50%;
     height: 180px; 
     padding: 20px;
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.8);
     }
+
+
 
 /* footer */
 
@@ -266,3 +289,4 @@ footer {
         font-size: 20px;
     }
 }
+
