--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@ body {
     justify-content: space-around;
     transition: 0.7s;
     padding: 10px 20px;
-    z-index: 10;
+    z-index: 50;
     
 }
 
@@ -190,47 +190,95 @@ main .sobre-nosotros {
     color: black;
 }
 
-.cards {
+
+#prueba{
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
-}
-
-.cards .card {
-    background: hsla(27, 80%, 47%, 0.664);
-    display: flex;
-    width: 30%;
-    height: 300px;
     align-items: center;
-    justify-content: space-evenly;
-    margin-top: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    min-height: 20vh;
 }
 
-.cards .card img {
-    
-    width: 200px;
-    height: 200px;
+
+.card {
+    position: relative;
+    width: 300px;
+    height: 350px;
+    margin: 10px;
+}
+
+.card .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.card .front {
+    transform: perspective(600px) rotateY(0deg);
+    box-shadow: 0 5px 10px #000;
+}
+
+.card .front img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    border: 3px solid #fff;
-    border-radius: 50%;
+}
+
+.card .front h3 {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    background: rgba(0,0,0,.4);
+    text-align: center;
+}
+
+.card .back {
+    transform: perspective(600px) rotateY(180deg);
+    background: linear-gradient(to right, hsla(0, 100%, 50%, 0.459),hsla(27, 80%, 47%, 0.664));
+    padding: 15px;
+    color: #f3f3f3;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    box-shadow: 0 5px 10px #000;
 }
 
-.cards .card>.contenido-texto-card {
-    padding-top: 20px;
-    background: white;
-    width: 98%;
-    color: black;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+.card .back .link {
+    border-top: solid 1px #f3f3f3;
+    height: 50px;
+    line-height: 50px;
 }
 
-.cards .card>.contenido-texto-card p {
-    
-    font-weight: 300;
-    padding-top: 5px;
+.card .back .link a {
+    color: #f3f3f3;
 }
+
+.card .back h3 {
+    font-size: 30px;
+    margin-top: 20px;
+    letter-spacing: 2px;
+}
+
+.card .back p {
+    letter-spacing: 1px;
+} 
+
+.card:hover .front {
+    transform: perspective(600px) rotateY(180deg);
+}
+
+.card:hover .back {
+    transform: perspective(600px) rotateY(360deg);
+} 
 
 /*  por que elegirnos */
 
